<resources>
    <string name="app_name">planney</string>
    <string name="appVersion">App Version</string>
    <string name="login">Login</string>
    <string name="yourEmail">Your Email</string>
    <string name="yourPassword">Your Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="dontHaveAcc">Don\u0027t have account? \n Sign Up</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="retypePassword">Retype Your Password</string>
    <string name="enterQuestion">Type a Question (In Case of Forgotten Password)</string>
    <string name="question">Question</string>
    <string name="ExampleQuestion">Example Question</string>
    <string name="enterAnswer">Enter the Answer</string>
    <string name="typeAnswer">Type Your Answer</string>
    <string name="today">Today</string>
    <string name="ads">ADS</string>

    <string name="tsummary">Summary</string>
    <string name="tbalance">Balance</string>
    <string name="tnew">New</string>
    <string name="tmyplan">My Plan</string>
    <string name="taccount">Account</string>
    <string name="bal_placeholder">Rp. XXXXXX</string>
    <string name="myexpense">My Expense</string>
    <string name="myexpensed">My expense so far</string>
    <string name="seeall">see all</string>
    <string name="recently">Recently</string>
    <string name="monthlysal">Monthly Salary</string>
    <string name="boardingh">Boarding House</string>
    <string name="freelancep">Freelance Project House</string>

    <string name="title_activity_my_plan_page">Placeholder for Missing Variable</string>
    <string name="hello_first_fragment">Placeholder for Missing Variable</string>
    <string name="next">Placeholder for Missing Variable</string>
    <string name="previous">Placeholder for Missing Variable</string>
    <string name="first_fragment_label">Placeholder for Missing Variable</string>
    <string name="second_fragment_label">Placeholder for Missing Variable</string>

</resources>