<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="Tab1to2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabsummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tsummary" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabbalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Tab1to2"
            android:text="@string/tbalance" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabnew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Tab1to3"
            android:text="@string/tnew" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabmyplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Tab1to4"
            android:text="@string/tmyplan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Tab1to5"
            android:text="@string/taccount" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="370dp"
        android:layout_height="156dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:srcCompat="@drawable/advertisement_board" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="11dp"
        android:text="@string/bal_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="84dp"
        android:text="@string/bal_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:text="@string/freelancep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="5dp"
        android:text="@string/myexpense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="84dp"
        android:text="@string/bal_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="84dp"
        android:text="@string/bal_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <View
        android:id="@+id/view5"
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:text="@string/myexpensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view4"
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view8"
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="128dp"
        android:background="#FF000000"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:text="@string/monthlysal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <View
        android:id="@+id/view7"
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="-1dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="284dp"
        android:text="@string/today"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="37dp"
        android:background="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view6"
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:text="@string/boardingh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="84dp"
        android:text="@string/seeall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="37dp"
        android:text="@string/bal_placeholder"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="5dp"
        android:text="@string/recently"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

</androidx.constraintlayout.widget.ConstraintLayout>